# slither-gym

./: readme.md
.devcontainer/: Dockerfile  devcontainer.json
gym/: pyproject.toml
gym/client/: script.js
gym/src/: __main__.py  model.py  model_server.py  renderer.py  slither_env.py  train.py  utils.py  websocket_server.py
