[project]
name = "slither-gym"
version = "0.1.0"
description = "Reinforcement learning for the Slither.io game"
authors = [
    {name = "James Stratford",email = "james.e.stratford@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "websockets (>=14.1,<15.0)",
    "stable-baselines3[extra] (>=2.4.1,<3.0.0)",
    "shimmy (>=2.0.0,<3.0.0)",
    "gymnasium (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
